# structural-probe-repl

./: .dockerignore  .gitignore  README.md  comprehensive_embedding_extraction.sh  pyproject.toml  requirements-mps.txt  test_coverage_orthogonality.py  validation_results_UD_Arabic_PADT_UD_Arabic_PADT.json  validation_results_UD_Czech_PDTC.json  validation_results_UD_English_EWT.json  validation_results_UD_Russian_SynTagRus.json  validation_results_UD_Vietnamese_VTB.json
configs/: config.yaml  config_extract.yaml  config_minimla.yaml
configs/dataset/: elmo_ewt_MY_sample.yaml  elmo_ewt_sample_whykay01.yaml  ptb_sd_official.yaml  ptb_tinysample_for_sanity.yaml  ud_english_ewt_full.yaml
configs/embeddings/: bert_base_L0_tinysample_sanity.yaml  bert_base_L7_ptb_sd.yaml  default.yaml  elmo_L0_ud_ewt_full.yaml  elmo_l1_ud_ewt_full.yaml  elmo_l2_MY_sample.yaml
configs/evaluation/: default.yaml  default_metrics.yaml  eval_hm_metrics.yaml
configs/experiment/: elmo_ewt_dist_phase1_train.yaml  elmo_fullewt_dist_L1_probe.yaml  elmo_fullewt_dist_probe.yaml
configs/extraction/: bert_base_cased_ud_ewt_all_layers.yaml
configs/hydra/: sweep_by_experiment.yaml
configs/job/: extract_embeddings.yaml  train_probe.yaml
configs/logging/: hm_ptb_sd_depth_L7.yaml  hm_ptb_sd_dist_L7.yaml  hm_ud_ewt_dist_L0.yaml  hm_ud_ewt_dist_L1.yaml  hm_ud_ewt_dist_L2.yaml  hm_ud_ewt_dist_L7.yaml  llama-3.2-3b_depth_L15.yaml  modern_ud_ewt_depth_L0.yaml  modern_ud_ewt_depth_L0_llama.yaml  modern_ud_ewt_depth_L1.yaml  modern_ud_ewt_depth_L10_llama.yaml  modern_ud_ewt_depth_L11_llama.yaml  modern_ud_ewt_depth_L12_llama.yaml  modern_ud_ewt_depth_L13_llama.yaml  modern_ud_ewt_depth_L14_llama.yaml  modern_ud_ewt_depth_L15_llama.yaml  modern_ud_ewt_depth_L16_llama.yaml  modern_ud_ewt_depth_L17_llama.yaml  modern_ud_ewt_depth_L18_llama.yaml  modern_ud_ewt_depth_L19_llama.yaml  modern_ud_ewt_depth_L1_llama.yaml  modern_ud_ewt_depth_L2.yaml  modern_ud_ewt_depth_L20_llama.yaml  modern_ud_ewt_depth_L21_llama.yaml  modern_ud_ewt_depth_L22_llama.yaml  modern_ud_ewt_depth_L23_llama.yaml  modern_ud_ewt_depth_L24_llama.yaml  modern_ud_ewt_depth_L25_llama.yaml  modern_ud_ewt_depth_L26_llama.yaml  modern_ud_ewt_depth_L27_llama.yaml  modern_ud_ewt_depth_L28_llama.yaml  modern_ud_ewt_depth_L29_llama.yaml  modern_ud_ewt_depth_L2_llama.yaml  modern_ud_ewt_depth_L30_llama.yaml  modern_ud_ewt_depth_L31_llama.yaml  modern_ud_ewt_depth_L3_llama.yaml  modern_ud_ewt_depth_L4_llama.yaml  modern_ud_ewt_depth_L5_llama.yaml  modern_ud_ewt_depth_L6_llama.yaml  modern_ud_ewt_depth_L7.yaml  (+16 more)
configs/model/: bert-base-cased.yaml  bert-base-multilingual-cased.yaml  gpt2.yaml  hf_base.yaml  llama-3.2-3b-instruct.yaml  llama-3.2-3b.yaml
configs/probe/: depth.yaml  depth_rank32.yaml  distance.yaml
configs/probe_rank/: 128.yaml  32.yaml  4.yaml  64.yaml  768.yaml
configs/runtime/: mps.yaml
configs_broken/: config.yaml
data_processing_scripts/: ptb_to_conllx.sh
docs/: ANALYSIS_INVARIANTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPENDENCIES.md  DOC_INDEX.md  ENVIRONMENT.md  ENV_SETUP.md  EXPERIMENT_PROTOCOL.md  HISTORY.md  KEY_RESULTS.md  KEY_RESULTS_OLD.md  MODELING_PLAN.md  PIPELINE_STAGES_1_6.md  PLOTTING_GUIDELINES.md  PROJECT_OVERVIEW.md  QUIRKS.md  README_FIRST_CHECKLIST.md  ROADMAP.md
env/: Dockerfile.legacy  Dockerfile.legacy_pt_cpu
scripts/: add_feats_coverage.py  add_height_covariates.py  augment_recovered_runs.py  build_analysis_table.py  build_master_per_layer.py  check_legacy_env.sh  check_tf1_env.sh  cleanup_generated_configs.py  compare_embeddings.py  compute_80th_percentile_arc_length.py  compute_80th_percentile_length.py  compute_fragmentation_metrics.py  compute_morphological_complexity.py  compute_sentence_covariates.py  compute_theilsen_trends.py  compute_ud_stats_derived.py  compute_wiki_exposure.py  convert_conllu_to_raw_generic.py  convert_sample_conllu_to_raw.py  create_conllu_sample.py  create_instruct_configs.sh  create_llama_dist_configs.sh  download_ud_treebanks.py  evaluate_from_checkpoint.py  extract_embeddings.py  finalize_morph_complexity.py  generate_all_canonical_embeddings.sh  generate_configs.py  generate_configs_from_ud_metadata.py  generate_elmo_embeddings_for_sample.sh  generate_elmo_embeddings_generic.sh  inventory_outputs.py  investigate_feats_coverage.py  merge_fragmentation_metrics.py  merge_sentence_covariates.py  plot_distance_binned.py  plot_distance_binned_stratified.py  plot_distance_scatters.py  plot_style.py  prefetch_model.py  (+24 more)
(+1484 files in other folders)
