# /pyproject.toml (Best Practice Refactored Version)

# PEP 621 standard metadata table. This is the source of truth for name, version, etc.
[project]
name = "structural-probe-repl"
version = "0.1.0"
description = "A replication and extension of Hewitt & Manning's (2019) structural probe."
authors = [
    {name = "Aaron Aggarwal", email = "aggarwal.aaron@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    # Pinning sensitive ML frameworks is good practice
    "torch (==2.6.0)",
    "numpy>=1.26.4,<2.0.0", 
    # Using PEP 440 specifiers
    "transformers (>=4.43.0)",
    "datasets>=3.5.1,<4.0.0",
    "scipy>=1.15.2,<2.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "h5py>=3.13.0,<4.0.0",
    "hydra-core>=1.3.2,<2.0.0",
    "hydra-joblib-launcher>=1.2.0,<2.0.0",
    "wandb>=0.19.11,<0.20.0",
    "matplotlib>=3.10.3,<4.0.0",
    "tokenizers (>=0.21.2,<0.22.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
]

# Poetry-specific configuration
[tool.poetry]
# This section is now much smaller. It does NOT repeat name, version, authors, etc.
packages = [
    { include = "torch_probe", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.12.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "src/legacy",
]


# Set the maximum line length. Black's default is 88.
line-length = 888
# Assume Python 3.11 for all checks.
target-version = "py311"

[tool.ruff.lint]
# Enable the 'E' (pycodestyle error), 'W' (pycodestyle warning),
# 'F' (Pyflakes), and 'I' (isort) rule sets.
select = ["E", "W", "F", "I"]

# You can ignore specific rules if needed. For example, E501 (line too long)
# is often handled by the formatter, but it's good to have it here.
# ignore = ["E501"]

[tool.ruff.format]
# Use double quotes for strings where possible.
quote-style = "double"